infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandradeidp
  namespace: mandradeidp
spec:
  selector:
    app: mandradeidp
  ports:
    - name: http
      port: 3000
      targetPort: 3000
